# Financial-Data-Sentiment-Analysis

./: .gitignore  Dockerfile  Dockerfile.airflow  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
dags/: my_dag.py
grafana/provisioning/dashboards/: my_dashboard.json
great_expectations/: great_expectations.yml
great_expectations/checkpoints/: my_checkpoint.yml
great_expectations/expectations/: reddit_posts_suite.json  trend_data_suite.json
prometheus/: prometheus.yml
scripts/: generate_mock_data.py
src/: main.py
