[tool.poetry]
name = "reddit-sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
psycopg2-binary = "^2.9.1"
sqlalchemy = {extras = ["asyncio"], version = "^1.4.27"}
asyncpg = "^0.25.0"
httpx = "^0.23.0"
httpcore = ">=0.15.0,<0.17.0"
pandas = "^2.1.4"
redis = "^4.0.2"
great-expectations = "^0.14.7"
python-json-logger = "^2.0.2"
alembic = "^1.7.5"
textblob = "^0.17.1"
jinja2 = "^2.11.3"
markupsafe = "2.0.1"
numpy = "<2.0.0" 

[tool.poetry.group.dev.dependencies]
pytest = "^6.2.5"
requests = "^2.26.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"